# loremaster

./: .gitignore  Cargo.toml  README.md
application/: .gitignore  Cargo.toml  Dockerfile  Loremaster-template.ron  README.md  index.html  requests.http
application/database/: drawSQL-pgsql-export.sql
application/database/enum/: frequency.sql
application/database/initalization/: setup.sql
application/database/table/: action.sql  chronicle.sql  chronicle_intention.sql  completed_action.sql  dictionary.sql  dictionary_term.sql  document.sql  email_address.sql  feature.sql  frequency.sql  goal.sql  intention.sql  intention_frequency.sql  intention_instance.sql  intention_status.sql  passkey.sql  password.sql  person.sql  person_action.sql  person_chronicle.sql  person_email_address.sql  person_goal.sql  person_passkey.sql  person_password.sql  person_principle.sql  person_quick_task.sql  person_skill.sql  person_sleep_schedule.sql  quick_task.sql  schedule.sql  skill.sql  term.sql  web_authentication_challenge.sql  web_authentication_key.sql  web_authentication_login.sql  web_authentication_register.sql
application/database/tables/: chronicle.sql  document_category.sql  document_type.sql  intention.sql  outcome.sql  person.sql  person_action.sql  person_document.sql  person_intention.sql
application/frontend/: .gitignore  Cargo.toml  README.md  index.html  index.scss
application/frontend/.cargo/: config.toml
application/frontend/src/: components.rs  data.rs  error_pages.rs  global_state.rs  lib.rs  main.rs  register.rs  routing.rs  templates.rs  utility.rs
application/frontend/src/components/: accordion.rs  chronicle.rs  combobox.rs  container.rs  demo.rs  form.rs  hello_world.rs  home.rs  icon.rs  index.rs  login.rs  modal.rs  navigation.rs  navigation_bar.rs  registration.rs  state.rs  switch.rs  tab.rs  tab_panel.rs  top_nav.rs  widget.rs
application/frontend/src/data/: chronicle.rs  credentials.rs  entity.rs  interface.rs
application/frontend/src/templates/: about.rs  chronicle.rs  design_system.rs  index.rs  login.rs  registration.rs  timeline.rs  you.rs
application/frontend/src/utility/: constants.rs  date_time_helper.rs  http_service.rs
application/frontend/static/favicon_io/: about.txt
application/frontend/styles/loremaster/: index.scss
application/infrastructure/: docker-compose.yml
application/src/: api.rs  controller.rs  data.rs  main.rs  utility.rs
application/src/api/: controller.rs  handler.rs  response.rs  router.rs  web_server.rs
application/src/api/controller/: authentication.rs  chronicle.rs  chronicle_controller.rs  home.rs  session_controller.rs
application/src/api/guards/: user.rs
application/src/api/handler/: authentication.rs  chronicle.rs  person.rs
application/src/api/router/: authentication.rs  chronicle.rs  person.rs  session.rs
application/src/configuration/: application.rs  logging.rs
application/src/controller/: chronicle_controller.rs  person_controller.rs  session_controller.rs
application/src/data/: entity.rs  postgres_handler.rs  query.rs  surreal_handler.rs
application/src/data/entity/: chronicle.rs  frequency.rs  intention.rs  passkey.rs  person.rs  quick_task.rs  schedule.rs  transfer.rs  web_authentication_challenge.rs  weekday.rs
application/src/data/query/: action.rs  authentication.rs  chronicle.rs  email_address.rs  frequency.rs  goal.rs  passkey.rs  person.rs  quick_task.rs
application/src/frontend/: index.rs
application/src/guards/: user.rs
application/src/security/: authentication.rs  sanitization.rs
application/src/security/authentication/: security_key.rs
application/src/utility/: constants.rs  loremaster_configuration.rs  password_encryption.rs  scheduler.rs  secret_service.rs  toml_reader.rs
application/src/utility/constants/: cookie_fields.rs  database.rs  files.rs  unicode.rs
backend/: Cargo.toml  index.html  requests.http
backend/database/: create table chronicle.sql  drawSQL-pgsql-export.sql  generate person table.sql  update database roles.sql
backend/database/configuration/: create database roles.sql  update database roles.sql
backend/database/query/person/: by_email_address.sql
backend/database/tables/: action.sql  action_category.sql  chronicle.sql  chronicle_document.sql  contingent_action.sql  intention.sql  person.sql  person_chronicle.sql  posession.sql
backend/src/: controller.rs  data.rs  main.rs  utility.rs
backend/src/controller/: chronicle_controller.rs  cookie_fields.rs  person_controller.rs  session_controller.rs
backend/src/data/: entity.rs  postgres_handler.rs  query.rs
backend/src/data/entity/: chronicle.rs  holiday.rs  person.rs  schedule.rs
backend/src/data/query/: chronicle.rs  person.rs  person_entity.rs
backend/src/guards/: user.rs
backend/src/utility/: constants.rs  password_encryption.rs  password_hashing.rs  scheduler.rs  secret_service.rs  toml_reader.rs
loremaster/: Cargo.toml
loremaster-database/: Cargo.toml
loremaster-database/src/: main.rs  postgres_handler.rs
loremaster-web-interface/: Cargo.toml
loremaster-web-interface/src/: data.rs  global_state.rs  main.rs  templates.rs
loremaster-web-interface/src/components/: accordion.rs  combobox.rs  container.rs  icon.rs  information.rs  modal.rs  navigation.rs  popover.rs  state.rs
loremaster-web-interface/src/components/navigation/: side_nav_bar.rs  top_nav_bar.rs
loremaster-web-interface/src/components/state/: validation.rs  visibility.rs
loremaster-web-interface/src/templates/: chronicle.rs  design_system.rs  login.rs  registration.rs
loremaster-web-interface/src/utility/: http_service.rs
loremaster-web-server/: Cargo.toml  Dockerfile  Loremaster-template.ron  README.md
loremaster-web-server/src/: configuration.rs  main.rs  security.rs
loremaster-web-server/src/api/: response.rs  web_server.rs
loremaster-web-server/src/api/guards/: user.rs
loremaster-web-server/src/data/: query.rs
loremaster-web-server/src/security/: authentication.rs
loremaster-web-server/src/utility/: constants.rs  password_encryption.rs
loremaster/src/: data.rs  lib.rs
(+243 files in other folders)
