[package]
name = "loremaster"
version = "0.1.0"
authors = ["Sean Myers <spmyers@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.62"
# Password Encryption
argon2 = "0.4.1"
# A web application framework that focuses on ergonomics and modularity.
axum = { version = "0.5.15", features = ["headers"] }
axum-extra = { version = "0.3.7", features = [
	"cookie",
	"cookie-private",
	"cookie-signed",
	"form",
] }
# Logging
env_logger = "0.9.0"
# Provides async programming foundational functionality
futures = "0.3.23"
# Logging
log = "0.4.17"
# Random nubmer generation
rand = "0.8.5"
# Serialization
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
# Database client/pool/toolkit
sqlx = { version = "0.6.1", features = [
	"json",
	"macros",
	"migrate",
	# "offline",
	"postgres",
	"runtime-tokio-native-tls",
	"time",
	"tls",
	"uuid",
] }
# Error/exception handling
thiserror = "1.0.32"
# Time
time = { version = "0.3.14", features = ["serde", "std"] }
# Backend async I/O functionality
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-test = "0.4.2"
# Encode/decode TOML content/files
toml = "0.5.9"
# Tower middleware and utilities for HTTP clients and servers
tower-http = { version = "0.3.4", features = ["cors", "fs"] }
# Implementation of Universally Unique Identifiers (Uuid)
uuid = { version = "1.1.2", features = ["v4", "serde"] }
