[package]
name = "loremaster"
version = "0.1.0"
authors = ["Sean Myers <spmyers@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.71"
# Password Encryption
argon2 = "0.5.0"
# A web application framework that focuses on ergonomics and modularity.
axum = { version = "0.6.18", features = ["headers", "http2", "ws", "tokio"] }
axum-extra = { version = "0.7.4", features = [
	"cookie",
	"cookie-private",
	"cookie-signed",
	"form",
] }
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
# Fast IDentity Online client to authenticator protocol (FIDO2 CTAP)
# ctap-hid-fido2 = { version = "3.4.2" }
# Email adderss validation
email_address = { version = "0.2.4" }
# Logging
env_logger = "0.10.0"
# Provides async programming foundational functionality
futures = "0.3.27"
# A library for HTML entity encoding and decoding
htmlescape = { version = "0.3.1" }
# Logging
log = "0.4.17"
# Random nubmer generation
rand = "0.8.5"
# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
# Database client/pool/toolkit
sqlx = { version = "0.6.3", features = [
	"json",
	"macros",
	"migrate",
	# "offline",
	"postgres",
	"runtime-tokio-native-tls",
	"time",
	"tls",
	"uuid",
] }
# NewSQL database -- to be used as an alternative to postgresql for this app
# surrealdb = { version = "1.0.0-beta.8" }
# Error/exception handling
thiserror = "1.0.40"
# Time
time = { version = "0.3.21", features = ["serde", "std", "parsing"] }
time-tz = { version = "1.0.2" }
# Backend async I/O functionality
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
tokio-test = { version = "0.4.2" }
# Encode/decode TOML content/files
toml = "0.7.3"
# Tower middleware and utilities for HTTP clients and servers
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
# Implementation of Universally Unique Identifiers (Uuid)
uuid = { version = "1.3.3", features = ["v4", "serde"] }
webauthn-rs = { version = "0.4.8", features = [
	"danger-allow-state-serialisation",
] }
