[package]
name = "loremaster"
version = "0.1.0"
authors = ["Sean Myers <spmyers@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.2", features = [ "runtime-tokio-rustls", "postgres", "tls" ] }
thiserror = "1.0.23"
tokio = { version = "1.2.0", features = ["full"] }
toml = "0.5.8"
uuid = "0.8.2"