[package]
name = "loremaster"
version = "0.1.0"
authors = ["Sean Myers <spmyers@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
cap = "0.1.0"
chrono = "0.4.19"
env_logger = "0.8.4"
log = "0.4.14"
mobc = "0.7.2"
mobc-postgres = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8", "with-chrono-0_4"]}
tokio-test = "0.4.2"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4", "serde"] }