[package]
name = "loremaster-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.75"
# Provides async programming foundational functionality
futures = "0.3.29"
loremaster = { path = "../loremaster" }
# Database client/pool/toolkit
sqlx = { version = "0.6.3", features = [
	"json",
	"macros",
	"migrate",
	# "offline",
	"postgres",
	"runtime-tokio-native-tls",
	"time",
	"tls",
	"uuid",
] }
# Error/exception handling
thiserror = "1.0.51"
# Backend async I/O functionality
tokio = { version = "1.35.1", features = ["full"] }
