[package]
name = "loremaster-web-interface"
version = "0.1.0"
edition = "2021"
authors = ["Sean Myers <spmyers@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.30" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = { version = "0.3.67" }
log = { version = "0.4.20" }
perseus = { version = "0.4.2", features = ["hydrate"] }
reqwasm = { version = "0.5.0" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
sycamore = { version = "0.8.2" }
time = { version = "0.3.31", features = [
	"macros",
	"serde",
	"std",
	"local-offset",
	"wasm-bindgen",
	"parsing",
	"formatting",
] }
uuid = { version = "1.7.0", features = ["serde", "v4", "js"] }
wasm-bindgen = { version = "0.2.90" }
wasm-bindgen-futures = { version = "0.4.40" }
webauthn-rs-proto = { version = "0.4.9", default-features = false, features = [
	"wasm",
] }
web-sys = { version = "0.3.67", features = [
	"AttestationConveyancePreference",
	"AuthenticatorSelectionCriteria",
	"AuthenticatorAttachment",
	"CredentialsContainer",
	"CredentialCreationOptions",
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"HtmlDialogElement",
	"HtmlDocument",
	"Navigator",
	"PublicKeyCredentialCreationOptions",
	"PublicKeyCredentialParameters",
	"PublicKeyCredentialType",
	"PublicKeyCredentialRpEntity",
	"PublicKeyCredentialUserEntity",
	"Storage",
	"UserVerificationRequirement",
	"Window",
] }


[target.'cfg(engine)'.dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
perseus-axum = { version = "=0.4.2", features = ["dflt-server"] }

[target.'cfg(client)'.dependencies]
