[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Sean Myers <spmyers@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.27" }
gloo-timers = { version = "0.2.6", features = ["futures"] }
js-sys = { version = "0.3.61" }
log = { version = "0.4.17" }
perseus = { version = "0.4.0", features = ["hydrate"] }
reqwasm = { version = "0.5.0" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
sycamore = { version = "0.8.2" }
time = { version = "0.3.20", features = [
	"macros",
	"serde",
	"std",
	"local-offset",
	"wasm-bindgen",
	"parsing",
	"formatting",
] }
ureq = { version = "2.6.2" }
uuid = { version = "1.3.2", features = ["serde"] }
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = { version = "0.4.34" }
webauthn-rs-proto = { version = "0.4.9", default-features = false, features = [
	"wasm",
] }
web-sys = { version = "0.3.61", features = [
	"AttestationConveyancePreference",
	"AuthenticatorSelectionCriteria",
	"AuthenticatorAttachment",
	"CredentialsContainer",
	"CredentialCreationOptions",
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"HtmlDocument",
	"Navigator",
	"PublicKeyCredentialCreationOptions",
	"PublicKeyCredentialParameters",
	"PublicKeyCredentialType",
	"PublicKeyCredentialRpEntity",
	"PublicKeyCredentialUserEntity",
	"UserVerificationRequirement",
	"Window",
] }


[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
perseus-axum = { version = "=0.4.0", features = ["dflt-server"] }

[target.'cfg(client)'.dependencies]
